# GeantSimulationForML

./: Geant4Config.cmake  README.md
HepMCEx02_PGun_CylindricGeo_CELL_HOM_Mat/: G4History.macro  GluonMacro.in  HepMCEx02.cc  LinkDef.h  PiPPi0macro.in  PionSubmitFolder.sh  Pionrun.sh  QuarkSubmitFolder.sh  Quarkrun.sh  hepmc_gun.in  hepmc_gun_old.in  hepmc_pythia8_quark.in  vis.mac
HepMCEx02_PGun_CylindricGeo_CELL_HOM_Mat/.ipynb_checkpoints/: MakeEventDisplay-checkpoint.ipynb  hepmc_gun_300-checkpoint.in  pflow_vis-checkpoint.ipynb
HepMCEx02_PGun_CylindricGeo_CELL_HOM_Mat/include/: CaloRCellParameterisation.hh  CaloRConstants.hh  Cell.hh  DownResolution.hh  GlobalVariables.hh  H02DetectorConstruction.hh  H02EventAction.hh  H02FullTrajectoryInfo.hh  H02PFlow.hh  H02PrimaryGeneratorAction.hh  H02RunAction.hh  H02RunData.hh  H02TrackInformation.hh  H02TrackingAction.hh  H02TrajField.hh  HepMCG4Interface.hh  HepMCG4Pythia8Interface.hh  HepMCG4Pythia8Messenger.hh  PCell.hh  TopoCluster.hh
HepMCEx02_PGun_CylindricGeo_CELL_HOM_Mat/src/: CaloRCellParameterisation.cc  Cell.cc  DownResolution.cc  H02DetectorConstruction.cc  H02EventAction.cc  H02PFlow.cc  H02PrimaryGeneratorAction.cc  H02RunAction.cc  H02RunData.cc  H02SteppingAction.cc  H02TrackInformation.cc  H02TrackingAction.cc  HepMCG4Interface.cc  HepMCG4Pythia8Interface.cc  HepMCG4Pythia8Messenger.cc  TopoCluster.cc
HepMCEx02_PGun_RectangularGeo_CELL_HOM_Mat/: CMakeLists.txt  EnergyResponse.C  HepMCEx02.cc  MakeFractionPlot.C  hepmc_gun.in  hepmc_pythia8_qcd.in  makeSamples.sh
HepMCEx02_PGun_RectangularGeo_CELL_HOM_Mat/.ipynb_checkpoints/: MakeEventDisplay-checkpoint.ipynb  RectangularGeo_UNET-checkpoint.ipynb  pflow_vis-checkpoint.ipynb
HepMCEx02_PGun_RectangularGeo_CELL_HOM_Mat/include/: CaloRCellParameterisation.hh  CaloRConstants.hh  Classes.hh  GlobalVariables.hh  H02DetectorConstruction.hh  H02RunAction.hh  H02RunData.hh  H02SteppingAction.hh  HepMCG4Classes.hh  HepMCG4Pythia8Interface.hh
HepMCEx02_PGun_RectangularGeo_CELL_HOM_Mat/src/: CaloRCellParameterisation.cc  H02DetectorConstruction.cc  H02EventAction.cc  H02PrimaryGeneratorAction.cc  H02PrimaryGeneratorMessenger.cc  H02RunAction.cc  H02RunData.cc  H02SteppingAction.cc  H02TrackingAction.cc  HepMCG4Pythia8Interface.cc
